add implementation to update release metadata
